<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geist_protocol</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="july@faust.ooo">July</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>std_msgs</depend>
  <depend>ros2_geist</depend>
  <depend>rclcpp</depend>
  <depend>common</depend>
  <depend>nanopb</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_export_depend>geist_protocol</build_export_depend>
  </export>
</package>
